# video-use-premiere

./: .env.example  .gitattributes  AGENTS.md  README.md  SKILL.md  install.bat  install.sh  pyproject.toml  tests.py
.codex/: config.toml
_smoke/: test_florence_caption.py
helpers/: _florence_pool.py  _florence_processor.py  _hf_env.py  _lazy_nemo.py  _onnx_pool.py  _onnx_providers.py  audio_lane.py  build_srt.py  caveman_compress.py  export_fcpxml.py  extract_audio.py  find_quote.py  florence_onnx.py  health.py  pack_timelines.py  parakeet_lane.py  preprocess.py  preprocess_batch.py  progress.py  render.py  visual_lane.py  vram.py  wealthy.py  whisper_lane.py
references/: b_roll_selection.md  parent_rules.md  scripted.md  shared_rules.md  subagent_broll_scout_rules.md  subagent_editor_rules.md  subagent_vocab_rules.md  subtitles.md
scripts/: cloud_setup.sh
