[project]
name = "video-use-premiere"
version = "0.2.0"
description = "Conversation-driven video editor skill for Claude Code — local-first, three-lane preprocessing, FCPXML export"
requires-python = ">=3.10"

# ---------------------------------------------------------------------------
# Always-on dependencies. Kept light so the package installs fast in CI / dev
# environments where you only want the renderer or FCPXML exporter and not
# the heavy ML preprocessors.
# ---------------------------------------------------------------------------
dependencies = [
    "librosa",        # waveform analysis for timeline_view
    "matplotlib",     # timeline_view figure compositing
    "pillow",         # PIL animations + frame manipulation
    "numpy",
    "tqdm",           # frame-level progress in lanes
    "rich>=13.0",     # multi-lane progress display + structured status lines
]

[project.optional-dependencies]
# ---------------------------------------------------------------------------
# Heavy ML preprocessing stack. Pulled in by install.sh / install.bat so a
# `pip install -e .` for a renderer-only deployment stays minimal.
#
# torch is NOT listed here because the user typically wants a specific CUDA
# index URL (cu121, cpu, rocm6.0…). The install scripts handle that.
# ---------------------------------------------------------------------------
preprocess = [
    # ── Speech (PRIMARY): ONNX Runtime Parakeet TDT ──
    # As of 2026-04 the speech lane defaults to a multi-session ONNX
    # Runtime pool driving NVIDIA Parakeet TDT 0.6B (English v2 / multi-
    # lingual v3, auto-routed by language). One InferenceSession per
    # worker thread, ORT releases the GIL during native Run() so N
    # python threads = N parallel native inferences on one GPU.
    #
    # See helpers/parakeet_onnx_lane.py / helpers/_onnx_pool.py for the
    # full plumbing, helpers/_onnx_providers.py for the EP ladder.
    #
    # `onnx-asr[gpu,hub]` ships:
    #   - the NeMo-compatible mel-spectrogram preprocessor (ONNX)
    #   - the TDT decoder (token + duration)
    #   - the silero VAD chunker (optional, used for very long audio)
    #   - HuggingFace Hub model fetch (the [hub] extra)
    "onnx-asr[gpu,hub]>=0.11.0",
    "onnxruntime-gpu>=1.22.0",  # CUDA + TensorRT EP support
    # tensorrt-cu12-libs is OPTIONAL — only needed when the user opts
    # into the TensorRT execution provider via VIDEO_USE_PARAKEET_TRT=1.
    # Pre-shipped here so the wheel cache primes on first install; the
    # provider ladder in `_onnx_providers.py` falls through to CUDA EP
    # gracefully if the import fails (corporate proxies, custom torch).
    "tensorrt-cu12-libs;platform_system!='Darwin'",

    # ── transformers (Florence-2 + CLAP processors) ──
    # Kept for the visual lane (Florence-2) and the CLAP processor /
    # tokenizer used by the audio lane (the audio lane itself runs
    # inference on ONNX Runtime — transformers is only loaded for
    # the audio + text feature extraction front-end).
    #
    # Lower bound 4.55 is where the native `Florence2ForConditionalGeneration`
    # class was added to transformers (we use the
    # `florence-community/Florence-2-base` HF-format checkpoint, NOT
    # the original `microsoft/Florence-2-base` which uses
    # trust_remote_code and broke against the new attention dispatcher
    # contract). Upper bound <6 leaves headroom for the entire 5.x
    # line — the community checkpoint is maintained against both
    # 4.55+ and 5.x cleanly.
    "transformers>=4.55,<6",

    "optimum>=1.20",           # BetterTransformer fast-path for Florence-2
    "accelerate>=0.30",        # device_map + dtype routing for the pipeline
    # ── Audio events (LAION CLAP via ONNX Runtime) ──
    # The CLAP audio lane (helpers/audio_lane.py) uses Xenova's
    # pre-converted ONNX exports of the LAION CLAP weights, fetched on
    # first run via `huggingface_hub` (transitive through transformers).
    # `transformers.AutoProcessor` handles the audio + text preprocessing
    # so the lane stays ORT-only at inference time. `soxr` is optional
    # but used for fast 16kHz->48kHz resampling on the WAV cache; if
    # missing the lane falls back to `librosa.resample` (slower, also OK).
    "soxr",                    # fast libsoxr resampling for CLAP's 48kHz path
    # ── Visuals ──
    "einops",                  # Florence-2 transitive
    "timm",                    # Florence-2 transitive
    "imageio-ffmpeg",          # in-memory frame extraction for visual_lane
    # ── Shared I/O ──
    "soundfile",               # WAV reading for audio_lane + extract_audio cache
]

# ---------------------------------------------------------------------------
# Standalone ONNX-Parakeet extra. Same packages as the speech sub-block of
# `preprocess`, exposed as its own optional install for renderer-only or
# transcribe-only deployments that don't want the full preprocess stack
# (transformers / florence). Useful in CI to test the speech lane in
# isolation. Activate the TensorRT EP at runtime with:
#
#   set VIDEO_USE_PARAKEET_TRT=1     (Windows)
#   export VIDEO_USE_PARAKEET_TRT=1  (POSIX)
#
# Without that env var the lane uses the CUDA EP (still ~57-100x RTFx on
# Ampere+) and avoids the first-run TensorRT engine compile cost.
# ---------------------------------------------------------------------------
onnx = [
    "onnx-asr[gpu,hub]>=0.11.0",
    "onnxruntime-gpu>=1.22.0",
    "tensorrt-cu12-libs;platform_system!='Darwin'",
]

# ---------------------------------------------------------------------------
# Optional Flash Attention 2. Modest speedup for Florence-2 visual captioning
# but the wheel build is fiddly on Windows (needs MSVC + CUDA toolkit) so it's
# strictly opt-in. install.sh / install.bat do NOT pull this. Users who want
# it run `pip install -e .[flash]` after a successful base install. Florence
# transparently falls back to SDPA when FA2 isn't found.
# ---------------------------------------------------------------------------
flash = [
    "flash-attn>=2.5.0",
]

# ---------------------------------------------------------------------------
# Optional speaker diarization for the speech lane. pyannote.audio needs an
# HF_TOKEN with model-card acceptance. Gated so users without speakers don't
# pay the cost (~600MB of extra deps + a model download on first run). See
# `helpers/diarize.py` for the lane-agnostic dispatch.
# ---------------------------------------------------------------------------
diarize = [
    "pyannote.audio>=3.1",
]

# ---------------------------------------------------------------------------
# Parakeet NeMo fallback ASR. Pulled in by `helpers/_lazy_nemo.py`
# automatically on the (rare) first session where ONNX Runtime can't load a
# working execution provider on the host. This extra exists so users who
# KNOW their host is in that boat can pre-install with `pip install -e
# .[parakeet]` and skip the first-run pip delay. See
# `helpers/parakeet_lane.py` for the runtime path.
#
# nemo_toolkit[asr] is heavy (~600MB: pulls torch-lightning, hydra-core,
# omegaconf, librosa, transitive C-extensions). Strictly opt-in to keep the
# default install slim — most users never trigger the fallback.
# ---------------------------------------------------------------------------
parakeet = [
    "nemo_toolkit[asr]>=2.0",
]

# ---------------------------------------------------------------------------
# FCPXML export via the Pixar / SWF industry-standard OpenTimelineIO. Cheap
# to install (pure Python wheels), kept optional so render-only deployments
# don't pull it.
# ---------------------------------------------------------------------------
fcpxml = [
    "opentimelineio>=0.17",
    "otio-fcpx-xml-adapter>=0.2",
]

# ---------------------------------------------------------------------------
# Animations. Manim is huge; kept opt-in.
# ---------------------------------------------------------------------------
animations = ["manim"]

# ---------------------------------------------------------------------------
# Convenience meta-extra: install absolutely everything.
# ---------------------------------------------------------------------------
all = [
    "video-use-premiere[preprocess,onnx,diarize,fcpxml,animations,flash,parakeet]",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
