[project]
name = "video-use-premiere"
version = "0.2.0"
description = "Conversation-driven video editor skill for Claude Code — local-first, three-lane preprocessing, FCPXML export"
requires-python = ">=3.10"

# ---------------------------------------------------------------------------
# Always-on dependencies. Kept light so the package installs fast in CI / dev
# environments where you only want the renderer or FCPXML exporter and not
# the heavy ML preprocessors.
# ---------------------------------------------------------------------------
dependencies = [
    "librosa",        # waveform analysis for timeline_view
    "matplotlib",     # timeline_view figure compositing
    "pillow",         # PIL animations + frame manipulation
    "numpy",
    "tqdm",           # frame-level progress in lanes
    "rich>=13.0",     # multi-lane progress display + structured status lines
]

[project.optional-dependencies]
# ---------------------------------------------------------------------------
# Heavy ML preprocessing stack. Pulled in by install.sh / install.bat so a
# `pip install -e .` for a renderer-only deployment stays minimal.
#
# As of the ONNX Florence-2 port, torch is no longer required by the default
# preprocess install — both the speech lane (Parakeet ONNX) and the visual
# lane (Florence-2 ONNX, see helpers/florence_onnx.py) run on ONNX Runtime.
# The only place torch still lives is the optional [diarize] extra
# (pyannote.audio) which the user opts into separately.
# ---------------------------------------------------------------------------
preprocess = [
    # ── Speech (PRIMARY): ONNX Runtime Parakeet TDT ──
    # As of 2026-04 the speech lane defaults to a multi-session ONNX
    # Runtime pool driving NVIDIA Parakeet TDT 0.6B (English v2 / multi-
    # lingual v3, auto-routed by language). One InferenceSession per
    # worker thread, ORT releases the GIL during native Run() so N
    # python threads = N parallel native inferences on one GPU.
    #
    # See helpers/parakeet_onnx_lane.py / helpers/_onnx_pool.py for the
    # full plumbing, helpers/_onnx_providers.py for the EP ladder.
    #
    # `onnx-asr[gpu,hub]` ships:
    #   - the NeMo-compatible mel-spectrogram preprocessor (ONNX)
    #   - the TDT decoder (token + duration)
    #   - the silero VAD chunker (optional, used for very long audio)
    #   - HuggingFace Hub model fetch (the [hub] extra)
    "onnx-asr[gpu,hub]>=0.11.0",
    "onnxruntime-gpu>=1.22.0",  # CUDA + TensorRT EP support
    # tensorrt-cu12-libs is OPTIONAL — only needed when the user opts
    # into the TensorRT execution provider via VIDEO_USE_PARAKEET_TRT=1
    # (speech) or VIDEO_USE_FLORENCE_TRT=1 (visual). Pre-shipped here so
    # the wheel cache primes on first install; the provider ladder in
    # `_onnx_providers.py` falls through to CUDA EP gracefully if the
    # import fails (corporate proxies, custom torch).
    "tensorrt-cu12-libs;platform_system!='Darwin'",

    # ── Visuals (Florence-2 ONNX) ──
    # The visual lane (helpers/visual_lane.py + helpers/florence_onnx.py)
    # uses the `onnx-community/Florence-2-base` repo's pre-exported four
    # ONNX subgraphs (vision_encoder, embed_tokens, encoder_model,
    # decoder_model_merged) driven by a hand-rolled NumPy beam-search
    # orchestrator. This replaces the old torch + transformers +
    # optimum + accelerate + einops + timm stack which was ~3 GB of
    # wheels and ~5s of cold-start eager imports.
    #
    # `tokenizers` (Rust BART tokenizer, no torch dep) replaces
    # `transformers.AutoTokenizer` for the visual lane. It's also a
    # transitive dep of `transformers` (kept below for CLAP) and of
    # `onnx-asr` so it's already in the install set — promoting to a
    # direct dep just makes the contract explicit.
    "tokenizers>=0.20",
    # `huggingface_hub` was previously pulled transitively through
    # `transformers`; with the visual lane no longer importing
    # transformers we list it explicitly so `snapshot_download` of the
    # Florence-2 ONNX weights still works on minimal installs.
    "huggingface_hub>=0.24",
    "imageio-ffmpeg",          # in-memory frame extraction for visual_lane

    # ── Audio events (LAION CLAP via ONNX Runtime + transformers) ──
    # The CLAP audio lane (helpers/audio_lane.py) uses Xenova's
    # pre-converted ONNX exports of the LAION CLAP weights, fetched on
    # first run via `huggingface_hub`. `transformers.AutoProcessor`
    # handles the audio + text preprocessing so the lane stays
    # ORT-only at inference time.
    #
    # We keep `transformers` as a soft dep specifically for CLAP's
    # mel-spectrogram + tokenizer feature extractor — porting that to
    # pure NumPy is doable but high-risk for quality drift on the audio
    # encoder side, and the audio lane is opt-in (Phase B) rather than
    # default-on like the visual lane was.
    #
    # The heavy torch-era companions (optimum, accelerate, einops, timm,
    # flash-attn) were dropped along with the Florence-2 torch path —
    # transformers itself without those is ~50 MB of pure-Python wheels.
    "transformers>=4.55,<6",
    # `soxr` is optional but used for fast 16kHz->48kHz resampling on
    # the WAV cache; if missing the lane falls back to `librosa.resample`
    # (slower, also OK).
    "soxr",                    # fast libsoxr resampling for CLAP's 48kHz path

    # ── Shared I/O ──
    "soundfile",               # WAV reading for audio_lane + extract_audio cache
]

# ---------------------------------------------------------------------------
# Standalone ONNX-Parakeet extra. Same packages as the speech sub-block of
# `preprocess`, exposed as its own optional install for renderer-only or
# transcribe-only deployments that don't want the full preprocess stack
# (transformers / florence). Useful in CI to test the speech lane in
# isolation. Activate the TensorRT EP at runtime with:
#
#   set VIDEO_USE_PARAKEET_TRT=1     (Windows)
#   export VIDEO_USE_PARAKEET_TRT=1  (POSIX)
#
# Without that env var the lane uses the CUDA EP (still ~57-100x RTFx on
# Ampere+) and avoids the first-run TensorRT engine compile cost.
# ---------------------------------------------------------------------------
onnx = [
    "onnx-asr[gpu,hub]>=0.11.0",
    "onnxruntime-gpu>=1.22.0",
    "tensorrt-cu12-libs;platform_system!='Darwin'",
]

# ---------------------------------------------------------------------------
# Optional speaker diarization for the speech lane. pyannote.audio needs an
# HF_TOKEN with model-card acceptance. Gated so users without speakers don't
# pay the cost (~600MB of extra deps + a model download on first run). See
# `helpers/diarize.py` for the lane-agnostic dispatch.
#
# This is the ONLY remaining extra that pulls torch into the install
# (pyannote.audio depends on it) — the default [preprocess] install is
# torch-free as of the Florence-2 ONNX port.
# ---------------------------------------------------------------------------
diarize = [
    "pyannote.audio>=3.1",
]

# ---------------------------------------------------------------------------
# Parakeet NeMo fallback ASR. Pulled in by `helpers/_lazy_nemo.py`
# automatically on the (rare) first session where ONNX Runtime can't load a
# working execution provider on the host. This extra exists so users who
# KNOW their host is in that boat can pre-install with `pip install -e
# .[parakeet]` and skip the first-run pip delay. See
# `helpers/parakeet_lane.py` for the runtime path.
#
# nemo_toolkit[asr] is heavy (~600MB: pulls torch-lightning, hydra-core,
# omegaconf, librosa, transitive C-extensions). Strictly opt-in to keep the
# default install slim — most users never trigger the fallback.
# ---------------------------------------------------------------------------
parakeet = [
    "nemo_toolkit[asr]>=2.0",
]

# ---------------------------------------------------------------------------
# FCPXML export via the Pixar / SWF industry-standard OpenTimelineIO. Cheap
# to install (pure Python wheels), kept optional so render-only deployments
# don't pull it.
# ---------------------------------------------------------------------------
fcpxml = [
    "opentimelineio>=0.17",
    "otio-fcpx-xml-adapter>=0.2",
]

# ---------------------------------------------------------------------------
# Animations. Manim is huge; kept opt-in.
# ---------------------------------------------------------------------------
animations = ["manim"]

# ---------------------------------------------------------------------------
# Convenience meta-extra: install absolutely everything.
# ---------------------------------------------------------------------------
all = [
    "video-use-premiere[preprocess,onnx,diarize,fcpxml,animations,parakeet]",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
