[project]
name = "video-use-premiere"
version = "0.2.0"
description = "Conversation-driven video editor skill for Claude Code — local-first, three-lane preprocessing, FCPXML export"
requires-python = ">=3.10"

# ---------------------------------------------------------------------------
# Always-on dependencies. The skill is a single end-to-end pipeline:
# preprocess (Parakeet speech + Florence-2 visuals + CLAP audio events)
# -> reason -> export FCPXML / xmeml + master.srt. Every real install
# wants ALL of this, so the heavy ML stack and the OpenTimelineIO
# adapters live in `dependencies` rather than behind opt-in extras.
# `pip install -e .` is now sufficient for the canonical run path.
#
# torch is NOT listed here because the user typically wants a specific
# CUDA index URL (cu121, cpu, rocm6.0…). The install scripts handle
# that step before pulling this list.
#
# What's intentionally still opt-in (see [project.optional-dependencies]):
#   * flash       - flash-attn 2 (fiddly Windows wheel build)
#   * diarize     - pyannote (gated HF model card, +600 MB)
#   * parakeet    - NeMo fallback ASR (only when ONNX EP can't load)
#   * animations  - manim (huge LaTeX dep chain, niche feature)
# ---------------------------------------------------------------------------
dependencies = [
    # ── Core utility: progress / plotting / image manipulation ────────
    "librosa",        # waveform analysis for timeline_view
    "matplotlib",     # timeline_view figure compositing
    "pillow",         # PIL animations + frame manipulation
    "numpy",
    "tqdm",           # frame-level progress in lanes
    "rich>=13.0",     # multi-lane progress display + structured status lines

    # ── Speech (PRIMARY): ONNX Runtime Parakeet TDT ──
    # As of 2026-04 the speech lane defaults to a multi-session ONNX
    # Runtime pool driving NVIDIA Parakeet TDT 0.6B (English v2 / multi-
    # lingual v3, auto-routed by language). One InferenceSession per
    # worker thread, ORT releases the GIL during native Run() so N
    # python threads = N parallel native inferences on one GPU.
    #
    # See helpers/parakeet_onnx_lane.py / helpers/_onnx_pool.py for the
    # full plumbing, helpers/_onnx_providers.py for the EP ladder.
    # Activate the TensorRT EP at runtime with:
    #   set VIDEO_USE_PARAKEET_TRT=1     (Windows)
    #   export VIDEO_USE_PARAKEET_TRT=1  (POSIX)
    # Without it the lane uses the CUDA EP (still ~57-100x RTFx on
    # Ampere+) and avoids the first-run TensorRT engine compile cost.
    #
    # `onnx-asr[gpu,hub]` ships:
    #   - the NeMo-compatible mel-spectrogram preprocessor (ONNX)
    #   - the TDT decoder (token + duration)
    #   - the silero VAD chunker (optional, used for very long audio)
    #   - HuggingFace Hub model fetch (the [hub] extra)
    "onnx-asr[gpu,hub]>=0.11.0",
    # ── ONNX Runtime, split by OS ──
    # `onnxruntime-gpu` ships CUDA + TensorRT + DirectML + CPU EPs but
    # has NO macOS wheels on PyPI (and never will — Apple killed CUDA
    # in 2018). On Darwin we fall back to plain `onnxruntime`, which
    # bundles the CoreML EP (Apple Neural Engine / Metal) plus the
    # universal CPU EP. The provider ladder in `_onnx_providers.py`
    # picks whichever EP the runtime exposes, so the same code path
    # works either way.
    "onnxruntime-gpu>=1.22.0;platform_system!='Darwin'",  # Win + Linux
    "onnxruntime>=1.22.0;platform_system=='Darwin'",      # macOS (CoreML/CPU)
    # tensorrt-cu12-libs is OPTIONAL — only needed when the user opts
    # into the TensorRT execution provider via VIDEO_USE_PARAKEET_TRT=1.
    # Pre-shipped here so the wheel cache primes on first install; the
    # provider ladder in `_onnx_providers.py` falls through to CUDA EP
    # gracefully if the import fails (corporate proxies, custom torch).
    # Skipped on Darwin (no CUDA on Mac) and Linux aarch64 (no wheel).
    "tensorrt-cu12-libs;platform_system!='Darwin' and platform_machine=='x86_64'",

    # ── transformers (Florence-2 + CLAP processors) ──
    # Kept for the visual lane (Florence-2) and the CLAP processor /
    # tokenizer used by the audio lane (the audio lane itself runs
    # inference on ONNX Runtime — transformers is only loaded for
    # the audio + text feature extraction front-end).
    #
    # Lower bound 4.55 is where the native `Florence2ForConditionalGeneration`
    # class was added to transformers (we use the
    # `florence-community/Florence-2-base` HF-format checkpoint, NOT
    # the original `microsoft/Florence-2-base` which uses
    # trust_remote_code and broke against the new attention dispatcher
    # contract). Upper bound <6 leaves headroom for the entire 5.x
    # line — the community checkpoint is maintained against both
    # 4.55+ and 5.x cleanly.
    "transformers>=4.55,<6",

    "optimum>=1.20",           # BetterTransformer fast-path for Florence-2
    "accelerate>=0.30",        # device_map + dtype routing for the pipeline
    # ── Audio events (LAION CLAP via ONNX Runtime) ──
    # The CLAP audio lane (helpers/audio_lane.py) uses Xenova's
    # pre-converted ONNX exports of the LAION CLAP weights, fetched on
    # first run via `huggingface_hub` (transitive through transformers).
    # `transformers.AutoProcessor` handles the audio + text preprocessing
    # so the lane stays ORT-only at inference time. `soxr` is optional
    # but used for fast 16kHz->48kHz resampling on the WAV cache; if
    # missing the lane falls back to `librosa.resample` (slower, also OK).
    "soxr",                    # fast libsoxr resampling for CLAP's 48kHz path
    # ── Visuals ──
    "einops",                  # Florence-2 transitive
    "timm",                    # Florence-2 transitive
    "imageio-ffmpeg",          # in-memory frame extraction for visual_lane
    # ── Caveman compression for the visual lane (default-on) ──
    # spaCy drives the NLP-based "caveman compression" pass that strips
    # stop words / determiners / auxiliaries / weak adverbs from every
    # Florence-2 caption before it lands in merged_timeline.md. Cuts the
    # editor-side token cost by 40-60% on detailed-caption footage with
    # zero loss of editorial signal (entities, actions, colours, shot
    # composition all survive). Runs in a per-file process pool with
    # mtime-cached output in <edit>/comp_visual_caps/. See
    # helpers/caveman_compress.py for the full filter list.
    #
    # The pass is opt-OUT via `pack_timelines.py --no-caveman` so users
    # who want the raw paragraphs can still get them (e.g. for debugging
    # what Florence actually said). The English model is downloaded on
    # first use via `python -m spacy download en_core_web_sm`.
    "spacy>=3.7,<4",
    # ── Shared I/O ──
    "soundfile",               # WAV reading for audio_lane + extract_audio cache

    # ── NLE handoff via OpenTimelineIO (Pixar / ASWF industry standard) ──
    # Two adapters because Premiere Pro and Resolve / FCP X want
    # DIFFERENT interchange dialects:
    #
    #   * otio-fcpx-xml-adapter -> FCPXML 1.10+ (.fcpxml). Native to
    #     DaVinci Resolve and Final Cut Pro X. Premiere does NOT read
    #     this directly (it requires the third-party XtoCC translator).
    #
    #   * otio-fcp-adapter      -> Final Cut Pro 7 xmeml (.xml).
    #     Premiere Pro imports this NATIVELY via File -> Import. This
    #     is the Premiere handoff path -- no XtoCC, no extra tools.
    #
    # helpers/export_fcpxml.py emits BOTH by default so the recipient
    # can pick whichever NLE they want without re-running the export.
    # Captions ship as `master.srt` written by helpers/build_srt.py
    # (called automatically by export_fcpxml).
    "opentimelineio>=0.17",
    "otio-fcpx-xml-adapter>=0.2",   # .fcpxml -> Resolve / FCP X
    "otio-fcp-adapter>=0.2",        # .xml    -> Premiere Pro (FCP7 xmeml)
]

[project.optional-dependencies]

# ---------------------------------------------------------------------------
# Optional Flash Attention 2. Modest speedup for Florence-2 visual captioning
# but the wheel build is fiddly on Windows (needs MSVC + CUDA toolkit) so it's
# strictly opt-in. install.sh / install.bat do NOT pull this. Users who want
# it run `pip install -e .[flash]` after a successful base install. Florence
# transparently falls back to SDPA when FA2 isn't found.
# ---------------------------------------------------------------------------
flash = [
    "flash-attn>=2.5.0",
]

# ---------------------------------------------------------------------------
# Optional speaker diarization for the speech lane. pyannote.audio needs an
# HF_TOKEN with model-card acceptance. Gated so users without speakers don't
# pay the cost (~600MB of extra deps + a model download on first run). See
# `helpers/diarize.py` for the lane-agnostic dispatch.
# ---------------------------------------------------------------------------
diarize = [
    "pyannote.audio>=3.1",
]

# ---------------------------------------------------------------------------
# Parakeet NeMo fallback ASR. Pulled in by `helpers/_lazy_nemo.py`
# automatically on the (rare) first session where ONNX Runtime can't load a
# working execution provider on the host. This extra exists so users who
# KNOW their host is in that boat can pre-install with `pip install -e
# .[parakeet]` and skip the first-run pip delay. See
# `helpers/parakeet_lane.py` for the runtime path.
#
# nemo_toolkit[asr] is heavy (~600MB: pulls torch-lightning, hydra-core,
# omegaconf, librosa, transitive C-extensions). Strictly opt-in to keep the
# default install slim — most users never trigger the fallback.
# ---------------------------------------------------------------------------
parakeet = [
    "nemo_toolkit[asr]>=2.0",
]

# ---------------------------------------------------------------------------
# Animations. Manim is huge (LaTeX dep chain, system-level cairo / ffmpeg
# bindings) and only used when the user explicitly asks for an animated
# overlay. Opt-in keeps the base install ~1 GB lighter.
# ---------------------------------------------------------------------------
animations = ["manim"]

# ---------------------------------------------------------------------------
# Convenience meta-extra: install everything opt-in alongside the base.
# ---------------------------------------------------------------------------
all = [
    "video-use-premiere[diarize,animations,flash,parakeet]",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
